# timestables

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  timestables.sln
include/glad/: glad.h
shaders/: compositing.fs  compositing.vs  instances.fs  instances.vs  outlineshader.fs  screen.fs  starfield.fs  starfield.vs  things.fs  things.vs  things_monochrome.vs
src/: anim_timer.hpp  audio.cpp  audio.hpp  bloxel.cpp  bloxel.hpp  camera.hpp  charlie.hpp  compositor.hpp  debug.hpp  framebuffers.cpp  framebuffers.hpp  game.cpp  game.hpp  gamelogic.cpp  glad.c  language.hpp  loadwav.cpp  main.cpp  shader.hpp  sprite.cpp  stb_image_implementation.cpp  text.cpp  text.hpp
